Closed Bug 397773 Opened 17 years ago Closed 17 years ago

mozilla-central+tamarin-central compile fails on linux

Categories

(Core :: JavaScript Engine, defect)

Other Branch
x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bhearsum, Assigned: jorendorff)

Details

Attachments

(1 file)

I'm getting the following error when compiling mozilla-central+tamarin-central on Linux:
/tools/gcc/bin/g++ -o jsregexp.o -c -I../../dist/include/system_wrappers -include /builds/buildbot/sendchange-slave-staging/sendchange-linux-hg/mozilla/config/gcc_hidden.h -DOSTYPE=\"Linux2.6.18-8\" -DOSARCH=Linux -DEXPORT_JS_API  -DJS_USE_SAFE_ARENA   -I../../dist/include   -I../../dist/include/js -I../../dist/include/nspr  -DMOZ_PNG_READ -DMOZ_PNG_WRITE   -I../../dist/sdk/include -I/builds/buildbot/sendchange-slave-staging/sendchange-linux-hg/mozilla/js/src    -fPIC   -fno-rtti -fno-exceptions -Wall -Wconversion -Wpointer-arith -Wcast-align -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wno-long-long -pedantic -fshort-wchar -pthread -pipe  -DNDEBUG -DTRIMMED -Os -freorder-blocks -fno-reorder-functions -gstabs+   -DMOZILLA_CLIENT -include ../../mozilla-config.h -Wp,-MD,.deps/jsregexp.pp /builds/buildbot/sendchange-slave-staging/sendchange-linux-hg/mozilla/js/src/jsregexp.cpp
/builds/buildbot/sendchange-slave-staging/sendchange-linux-hg/mozilla/js/src/jsreops.tbl:147: error: comma at end of enumerator list
gmake[4]: *** [jsregexp.o] Error 1
gmake[4]: Leaving directory `/builds/buildbot/sendchange-slave-staging/sendchange-linux-hg/mozilla/objdir/js/src'
gmake[3]: *** [libs_tier_js] Error 2
gmake[3]: Leaving directory `/builds/buildbot/sendchange-slave-staging/sendchange-linux-hg/mozilla/objdir'
gmake[2]: *** [tier_js] Error 2
gmake[2]: Leaving directory `/builds/buildbot/sendchange-slave-staging/sendchange-linux-hg/mozilla/objdir'
make[1]: *** [default] Error 2
make[1]: Leaving directory `/builds/buildbot/sendchange-slave-staging/sendchange-linux-hg/mozilla/objdir'
Yeah, you need --disable-pedantic. This isn't a problem on trunk because the rules for compiling C are more lenient than compiling C++.
Ah. That'll do it.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → INVALID
Attached patch v1Splinter Review
Looks like there's a way to fix this and make the code a bit better at the same time...
Assignee: general → jorendorff
Status: RESOLVED → ASSIGNED
Attachment #282568 - Flags: review?(mrbkap)
Resolution: INVALID → ---
I've got a week of vacation starting tomorrow, so feel free to check this into trunk, if it gets r+ in my absence.  It'll eventually trickle down to mozilla-central (several people occasionally merge stuff down).
OS: Mac OS X → Linux
Comment on attachment 282568 [details] [diff] [review]
v1

Brian should look at this too. The "limit" name at the end of reop_names should be unused, right?
Attachment #282568 - Flags: review?(mrbkap)
Attachment #282568 - Flags: review?(crowder)
Attachment #282568 - Flags: review+
The patch breaks REGEXP_DEBUG, doesn't it?
Ignore my last comment, I should have looked at the patch with more context.
Comment on attachment 282568 [details] [diff] [review]
v1

I like, this is how other such .tbl-generated enums and such are done. Let's sync cvs and hg here.

/be
Attachment #282568 - Flags: review?(crowder)
Attachment #282568 - Flags: review+
Attachment #282568 - Flags: approval1.9+
Keywords: checkin-needed
Could someone check this in?  I'm not a CVS committer.
Fixed on CVS trunk. I'll merge this over when it appears in cvs-trunk-mirror.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago17 years ago
Resolution: --- → FIXED
Keywords: checkin-needed
Flags: in-testsuite-
Flags: in-litmus-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: