Bug 397773 - mozilla-central has pedantic errors because of extra commas, r=mrbkap+brendan a=brendan